15 January 2021: Wouter
	- Merge #402 from fobser: Implement IPv4-Embedded addresses according
	  to RFC6052.

14 January 2021: Wouter
	- Fix for #93: dynlibmodule import library is named libunbound.dll.a.

13 January 2021: Wouter
	- Merge #399 from xiangbao227: The lock of lruhash table should
	  unlocked after markdel entry.
	- Fix for #93: dynlibmodule link fix for Windows.

12 January 2021: Wouter
	- Fix #397: [Feature request] add new type always_null to local-zone
	  similar to always_nxdomain.
	- Fix so local zone types always_nodata and always_deny can be used
	  from the config file.

8 January 2021: Wouter
	- Merge PR #391 from fhriley: Add start_time to reply callbacks so
	  modules can compute the response time.
	- For #391: use struct timeval* start_time for callback information.
	- For #391: fix indentation.
	- For #391: more double casts in python start time calculation.
	- Add comment documentation.
	- Fix clang analysis warning.

6 January 2021: Wouter
	- Fix #379: zone loading over HTTP appears to have buffer issues.
	- Merge PR #395 from mptre: add missing null check.
	- Fix #387: client-subnet-always-forward seems to effectively bypass
	  any caching?

5 January 2021: Wouter
	- Fix #385: autoconf 2.70 impacts unbound build
	- Merge PR #375 by fhriley: Add rpz_enable and rpz_disable commands
	  to unbound-control.

4 January 2021: Wouter
	- For #376: Fix that comm point event is not double removed or double
	  added to event map.
	- iana portlist updated.

16 December 2020: George
	- Fix error cases when udp-connect is set and send() returns an error
	  (modified patch from Xin Li @delphij).

11 December 2020: Wouter
	- Fix #371: unbound-control timeout when Unbound is not running.
	- Fix to squelch permission denied and other errors from remote host,
	  they are logged at higher verbosity but not on low verbosity.
	- Merge PR #335 from fobser: Sprinkle in some static to prevent
	  missing prototype warnings.